Remove debug echo on tests scripts. Change interfaces and methods to java interfaces - lists, maps and sets
git-svn-id: http://compss.bsc.es/svn/compss/framework/trunk@3160 9ab3861e-6c05-4e1b-b5ef-99af60850597

Former-commit-id: c6688191c97fade38022288c26f9d9243a6b7306